# skipi-broker

./: .gitignore  AGENTS.md  presence-manifest.json
.github/workflows/: release.yml  skipi-guard.yml
scripts/: publish-build.sh
server/per-user-mailbox/: README.md
server/per-user-mailbox/alembic/versions/: e4b2f9a1c7d6_per_user_mailbox.py
server/per-user-mailbox/app/: mail_crypto.py
server/per-user-mailbox/app/routers/: mail.py
server/per-user-mailbox/patches/: config.py.diff  mail_router.py.diff  mail_service.py.diff  models.py.diff
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: feedback.rs  lib.rs  main.rs
tests/: broker_plugin_isolation_harness.mjs  broker_presence_contract_harness.mjs  map_contract_harness.mjs  trial_gate_wired_harness.mjs
